# XJTU-RMV

./: README.md
XJTU-RMV-Task01/: CMakeLists.txt  README.md  main.cpp
XJTU-RMV-Task01/images/: .gitignore
XJTU-RMV-Task02/: CMakeLists.txt  README.md
XJTU-RMV-Task02/src/: catchLight.cpp  main.cpp
XJTU-RMV-Task03/: CMakeLists.txt  README.md
XJTU-RMV-Task03/src/: main.cpp
XJTU-RMV-Task04/: .gitignore  README.md
XJTU-RMV-Task04/src/hik_camera_driver/: CMakeLists.txt  package.xml
XJTU-RMV-Task04/src/hik_camera_driver/config/: camera_params.yaml
XJTU-RMV-Task04/src/hik_camera_driver/include/hik_camera_driver/: hik_camera.hpp
XJTU-RMV-Task04/src/hik_camera_driver/launch/: camera.launch.py
XJTU-RMV-Task04/src/hik_camera_driver/src/: hik_camera.cpp  hik_camera_node.cpp  test_mvs.cpp
